k8s/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pace
spec:
  template:
    spec:
      containers:
      - name: pace
