k8s/dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: myresolver
spec:
  rules:
    - host: dev.lauf-gegen-rechts.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dev-pace
                port:
                  number: 3000
